# ROS2-Basic

./: README.md
config/: bashrc_conf.txt  vs_code_cfn.txt
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  cpp_node  hw_status_publisher  robot_news_station  smartphone
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh  package.sh  package.xml
install/my_py_pkg/lib/my_py_pkg/: number_publish  robot_news_station = my_py_pkg.robot_news_station:mainsmartphone
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/launch/: turtlesim_catch_them_all.launch.py
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/srv/: catch_tutle.h
install/my_robot_interfaces/share/my_robot_interfaces/: package.sh  package.xml
install/turtlesim_catch_them_all/share/turtlesim_catch_them_all/: package.sh  package.xml
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp  template_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: number_app.launch.py
src/my_robot_interfaces/: CMakeLists.txt
src/turtlesim_catch_them_all/: setup.py
src/turtlesim_catch_them_all/turtlesim_catch_them_all/: turtle_controller.py
(+16 files in other folders)
